--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -56,6 +56,7 @@
     <string name="label_delete">Supprimer</string>
     <string name="label_edit">Modifier</string>
     <string name="label_export">Exporter</string>
+    <string name="label_share">Partager</string>
     <string name="recipe_delete_title">Supprimer la recette</string>
     <string name="recipe_delete_message">Attention, tous vos menus et vos courses liés à cette recette seront aussi supprimés.</string>
     <string name="recipe_delete_delete">Supprimer</string>
