--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -75,6 +75,7 @@
     <string name="dialog_product">Produit</string>
     <string name="dialog_unit">Unité</string>
     <string name="dialog_value">Valeur</string>
+    <string name="label_empty_recipe">Ajout manuel</string>
 
     <!--- PRODUCT -->
     <string name="product">Produits</string>
