--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -116,6 +116,7 @@
         <item>L</item>
         <item>cl</item>
         <item>ml</item>
+        <item>cup</item>
         <item>c.s.</item>
         <item>c.c.</item>
         <item>pincée(s)</item>
