--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,7 @@
         <item>L</item>
         <item>cl</item>
         <item>ml</item>
+        <item>cup</item>
         <item>T</item>
         <item>t</item>
         <item>pinch(es)</item>
