--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="label_ingredient">Ingredients</string>
     <string name="label_ingredient_value">Value</string>
     <string name="label_ingredient_unit">Unit</string>
+    <string name="label_ingredient_quantity">Quantity</string>
     <string name="label_ingredient_label">Ingredient</string>
     <string name="label_steps">Preparation</string>
     <string name="label_step_label">Step</string>
@@ -76,6 +77,7 @@
     <string name="item_events_manager" >Manage meals</string>
     <string name="item_remove_all" >Delete all items</string>
     <string name="dialog_product">Product</string>
+    <string name="dialog_quantity">Quantity</string>
     <string name="dialog_unit">Unit</string>
     <string name="dialog_value">Value</string>
     <string name="label_empty_recipe">Manual add</string>
